# access_control

./: .gitignore
doc/: installation-instructions.md  tcdoor-spec.md
src/: .gitignore  messages.md  pytest.ini
src/accx_hw/: accx.py  config_template.yaml  fob_db.py  reader_board.py
src/activity_log/: activity_log.py
src/arduino/: CMakeLists.txt  Makefile  README.md  commandline.md  door_firmware.cpp  door_firmware.ino
src/arduino/cmake/: ArduinoToolchain.cmake
src/arduino/cmake/Platform/: Arduino.cmake
src/arduino/libraries/Adafruit_MCP23017/examples/: button.pde  toggle.pde
src/arduino/libraries/DS1307/: DS1307.cpp  DS1307.h
src/arduino/libraries/E24C1024/: E24C1024.cpp  E24C1024.h
src/arduino/libraries/NewSoftSerial/: keywords.txt
src/arduino/libraries/WIEGAND26/: WIEGAND26.cpp  WIEGAND26.h
src/civicrm_db_watcher/: main.py
src/door_display/: README  README.md  app.py  config_template.yaml  display.ini  door_display.py  door_display.service
src/door_display/templates/: container.html  expired.html  idle.html  unrecognized.html  welcome.html
src/rasppi/: .gitignore  TODO  app.py  authorization_service.py  aws_wrapper.py  backup_dooraccess.db  config_template.yaml  configuration.py  dakboard_interface.py  door_config.yaml  fake_data.py  hardware.py  icaltest.ics  icalwrapper.py  models.py  plugins.py  pyrequirements  sqs messages  tcdoor.service  test_timespec.py  webpanel.py
src/rasppi/auth/: auth_plugin.py  civi_fallback.py  clubhouse_authorization.py  comparedbs.sh  tcmaker_membership.py  wildapricot.py
src/rasppi/auth_server/: app.py  auth_server.py  rpc_client.py  tcmaker_membership.py
src/scratches/: mqttlistener.py  mqtttest.py  simscan.py
src/tcmaker_access/: README  config_template.yaml  esp_interface.py  models.py  tcmaker_access.py
(+34 files in other folders)
